# disk-dump-view

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: createTestDrives.sh  diskCreator.py
src/: main.cpp  partition.hpp  partitionSchemes.cpp  partitionSchemes.hpp  utils.hpp
src/fs/: ext4.cpp  ext4.hpp  fs.hpp  fsMagicNums.cpp  fsMagicNums.hpp
src/partTables/: gptTable.cpp  mbrTable.cpp  partitionTables.cpp  partitionTables.hpp  ptTypes.hpp
